# jat-slides

./: .dockerignore  .env.example  .gitignore  Dockerfile  config.toml  entrypoint.sh  pyproject.toml  template.pptx
config/: mun.toml  trimmed.toml  zone.toml
dagster/: dagster.yaml
jat_slides/: definitions.py  managers.py  partitions.py  resources.py
jat_slides/assets/: __init__.py  agebs.py  built.py  cells.py  common.py  income.py  jobs.py  maps.py  muns.py  slides.py
jat_slides/assets/agebs/: __init__.py  base.py  trimmed.py
jat_slides/assets/maps/: __init__.py  built.py  common.py  income.py  jobs.py  population_grid.py  population_grid_plot.py
jat_slides/assets/slides/: __init__.py  base.py  merged.py
jat_slides/assets/stats/: __init__.py  built_after_2000.py  built_area.py  built_urban_area.py  jobs.py  lost_pop_after_2000.py  population.py
utils/: cloud_paths.py  mun_2020.json  mun_partitions_list.py  new_partitions.py  utils_adls.py
